[tool.poetry]
name = "slackstarterbot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
replit = "3.3.2"
requests = "2.31.0"
flask = "2.3.3"
discord = "2.3.2"
matplotlib = "3.8.0"
slack-blockkit = "0.0.5"
quick-slack = "1.0.2b0"
slack-pybot = "0.0.3"
flask-slack = "0.1.5"
slack = "0.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
